changed file names so they go in root directory

--- a/notebooks/data_exploration.ipynb
+++ b/notebooks/data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
     "#       -ISIC_2019_Test_Input\n",
     "#           -images\n",
     "'''\n",
-    "If it doesn't work (if it does work then just delete all this):\n",
+    "If it doesn't work uncomment this (if it does work then just delete all this):\n",
     "name = input(\"Enter name: \")\n",
     "if name.lower() == \"han\":\n",
     "    training_path = \"\"\n",
@@ -104,9 +104,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training labels preview:\n",
+      "          image  MEL   NV  BCC   AK  BKL   DF  VASC  SCC  UNK\n",
+      "0  ISIC_0000000  0.0  1.0  0.0  0.0  0.0  0.0   0.0  0.0  0.0\n",
+      "1  ISIC_0000001  0.0  1.0  0.0  0.0  0.0  0.0   0.0  0.0  0.0\n",
+      "2  ISIC_0000002  1.0  0.0  0.0  0.0  0.0  0.0   0.0  0.0  0.0\n",
+      "3  ISIC_0000003  0.0  1.0  0.0  0.0  0.0  0.0   0.0  0.0  0.0\n",
+      "4  ISIC_0000004  1.0  0.0  0.0  0.0  0.0  0.0   0.0  0.0  0.0\n",
+      "Melanoma images: 4522\n",
+      "Non-Melanoma images: 20809\n",
+      "MEL\n",
+      "0.0    82.148356\n",
+      "1.0    17.851644\n",
+      "Name: proportion, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "# Verify extracted data\n",
     "\n",
@@ -130,9 +150,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nMEL: Melanoma\\nNV: Melanocytic nevus\\nBCC: Basal cell carcinoma\\nAK: Actinic keratosis\\nBKL: Benign keratosis (solar lentigo / seborrheic keratosis / lichen planus-like keratosis)\\nDF: Dermatofibroma\\nVASC: Vascular lesion\\nSCC: Squamous cell carcinoma\\nUNK: None of the above\\n'"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'''\n",
     "MEL: Melanoma\n",
@@ -149,9 +180,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nEnglish\\nMEL: Cancerous cells, what we are trying to detect\\nNV: mole on the skin, not cancerous\\n    - round, flat/raised, brown or black spots on the skin with smooth edges\\nBCC: type of skin cancer, not melanoma\\n    - rolled edges, pearly appearance, and visible blood vessels\\nAK: pre-cancerous skin condition, not melanoma\\n    - rough, scaly patches on sun-exposed skin\\nBKL: benign skin lesions/skin growth, not cancerous\\n    - brown or black spots on the skin, often with irregular borders\\nDF: firm skin bumps, not cancerous\\n    - small, raised, and firm nodules that are usually brown or skin-colored\\nVASC: abnormal malformation of blood vessels, not cancerous\\n    - red or purple lesions on the skin, often with a raised appearance\\nSCC: type of skin cancer, not melanoma\\n    - scaly, crusted patches or open sores that do not heal\\nUNK: unc status\\n'"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'''\n",
     "English\n",
@@ -176,9 +218,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Melanoma images:  4522\n",
+      "Melanocytic nevus images:  12875\n",
+      "Basal cell carcinoma images:  3323\n",
+      "Actinic keratosis images:  867\n",
+      "Benign keratosis images:  2624\n",
+      "Dermatofibroma images:  239\n",
+      "Vascular lesion images:  253\n",
+      "Squamous cell carcinoma images:  628\n",
+      "None of the above images:  0\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Melanoma images: \", len(df[df[\"MEL\"] == 1]))\n",
     "print(\"Melanocytic nevus images: \", len(df[df[\"NV\"] == 1]))\n",
@@ -193,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,12 +354,12 @@
     "        output_path = os.path.join(output_dir, image_name)\n",
     "        cv2.imwrite(output_path, preprocessed_image)\n",
     "\n",
-    "preprocess_all_images(training_data, \"/preprocessed_images\")"
+    "preprocess_all_images(training_data, \"../preprocessed_images\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +407,7 @@
     "    #print(len(df_ordered))\n",
     "\n",
     "majority_split = 0.5 # XX% majority (Non-Melanoma), XX% minority (Melanoma)\n",
-    "undersample_data(df_train_labels_updated, majority_split, \"/preprocessed_images/ISIC_2019_Training_GroundTruth_preprocessed.csv\")\n"
+    "undersample_data(df_train_labels_updated, majority_split, \"../preprocessed_images/ISIC_2019_Training_GroundTruth_preprocessed.csv\")\n"
    ]
   },
   {
@@ -416,7 +474,7 @@
     "            \n",
     "            cv2.imwrite(aug_path, aug_img)\n",
     "\n",
-    "# augment_data(\"/augmented_images\", \"augmented_images\", num_augmentations=3)"
+    "# augment_data(\"../preprocessed_images\", \"../augmented_images\", num_augmentations=3)"
    ]
   }
  ],
