File paths work, removed the if block

--- a/notebooks/data_exploration.ipynb
+++ b/notebooks/data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,15 +33,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Found training labels\n",
+      "Found testing labels\n",
       "Training data:  25331\n",
-      "Testing data:  8238\n",
+      "Testing data:  1592\n",
       "Training labels:  25331\n",
       "Testing labels:  8238\n"
      ]
@@ -60,21 +62,6 @@
     "#       -ISIC_2019_Test_GroundTruth.csv\n",
     "#       -ISIC_2019_Test_Input\n",
     "#           -images\n",
-    "'''\n",
-    "If it doesn't work uncomment this (if it does work then just delete all this):\n",
-    "name = input(\"Enter name: \")\n",
-    "if name.lower() == \"han\":\n",
-    "    training_path = \"\"\n",
-    "    testing_path = \"\"\n",
-    "    training_labels_path = \"\"\n",
-    "    testing_labels_path = \"\"\n",
-    "else:\n",
-    "    training_path = \"../isic_2019/ISIC_2019_Training_Input/ISIC_2019_Training_Input\"\n",
-    "    testing_path = \"../isic_2019/ISIC_2019_Test_Input/ISIC_2019_Test_Input\"\n",
-    "\n",
-    "    training_labels_path = \"../isic_2019/ISIC_2019_Training_Input/ISIC_2019_Training_GroundTruth.csv\"\n",
-    "    testing_labels_path = \"../isic_2019/ISIC_2019_Test_Input/ISIC_2019_Test_GroundTruth.csv\"\n",
-    "'''\n",
     "\n",
     "\n",
     "training_path = \"../isic_2019/ISIC_2019_Training_Input/ISIC_2019_Training_Input\"\n",
@@ -83,8 +70,11 @@
     "training_labels_path = \"../isic_2019/ISIC_2019_Training_Input/ISIC_2019_Training_GroundTruth.csv\"\n",
     "testing_labels_path = \"../isic_2019/ISIC_2019_Test_Input/ISIC_2019_Test_GroundTruth.csv\"\n",
     "\n",
+    "\n",
     "training_labels = pd.read_csv(training_labels_path)\n",
+    "print(\"Found training labels\")\n",
     "testing_labels = pd.read_csv(testing_labels_path)\n",
+    "print(\"Found testing labels\")\n",
     "\n",
     "def load_data(path):\n",
     "    data = []\n",
@@ -494,7 +484,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
