--- a/notebooks/data_exploration.ipynb
+++ b/notebooks/data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -50,9 +50,6 @@
     }
    ],
    "source": [
-    "\n",
-    "# Han I don't know if the file paths will work like this for you but I think they should\n",
-    "# I put both training and testing data in the same overhead folder of isic_2019 so\n",
     "# -isic_2019\n",
     "#   -ISIC_2019_Training_Input\n",
     "#       -ISIC_2019_Training_GroundTruth.csv\n",
@@ -63,13 +60,11 @@
     "#       -ISIC_2019_Test_Input\n",
     "#           -images\n",
     "\n",
-    "\n",
     "training_path = \"../isic_2019/ISIC_2019_Training_Input/ISIC_2019_Training_Input\"\n",
     "testing_path = \"../isic_2019/ISIC_2019_Test_Input/ISIC_2019_Test_Input\"\n",
     "\n",
     "training_labels_path = \"../isic_2019/ISIC_2019_Training_Input/ISIC_2019_Training_GroundTruth.csv\"\n",
     "testing_labels_path = \"../isic_2019/ISIC_2019_Test_Input/ISIC_2019_Test_GroundTruth.csv\"\n",
-    "\n",
     "\n",
     "training_labels = pd.read_csv(training_labels_path)\n",
     "print(\"Found training labels\")\n",
@@ -94,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +144,7 @@
        "'\\nMEL: Melanoma\\nNV: Melanocytic nevus\\nBCC: Basal cell carcinoma\\nAK: Actinic keratosis\\nBKL: Benign keratosis (solar lentigo / seborrheic keratosis / lichen planus-like keratosis)\\nDF: Dermatofibroma\\nVASC: Vascular lesion\\nSCC: Squamous cell carcinoma\\nUNK: None of the above\\n'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +174,7 @@
        "'\\nEnglish\\nMEL: Cancerous cells, what we are trying to detect\\nNV: mole on the skin, not cancerous\\n    - round, flat/raised, brown or black spots on the skin with smooth edges\\nBCC: type of skin cancer, not melanoma\\n    - rolled edges, pearly appearance, and visible blood vessels\\nAK: pre-cancerous skin condition, not melanoma\\n    - rough, scaly patches on sun-exposed skin\\nBKL: benign skin lesions/skin growth, not cancerous\\n    - brown or black spots on the skin, often with irregular borders\\nDF: firm skin bumps, not cancerous\\n    - small, raised, and firm nodules that are usually brown or skin-colored\\nVASC: abnormal malformation of blood vessels, not cancerous\\n    - red or purple lesions on the skin, often with a raised appearance\\nSCC: type of skin cancer, not melanoma\\n    - scaly, crusted patches or open sores that do not heal\\nUNK: unc status\\n'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,9 +303,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating output directory\n",
+      "ISIC_0000000.jpg\n",
+      "ISIC_0000001.jpg\n",
+      "ISIC_0000002.jpg\n",
+      "ISIC_0000003.jpg\n",
+      "ISIC_0000004.jpg\n",
+      "ISIC_0000006.jpg\n",
+      "ISIC_0000007.jpg\n",
+      "ISIC_0000008.jpg\n",
+      "ISIC_0000009.jpg\n",
+      "ISIC_0000010.jpg\n"
+     ]
+    }
+   ],
    "source": [
     "'''PREPROCESSING'''\n",
     "import shutil\n",
@@ -333,12 +346,14 @@
     "\n",
     "def preprocess_all_images(image_list, output_dir):\n",
     "    if not os.path.exists(output_dir):\n",
+    "        print(\"Creating output directory\")\n",
     "        os.makedirs(output_dir)\n",
-    "    if os.path.exists(output_dir):\n",
+    "    elif os.path.exists(output_dir):\n",
+    "        print(\"Output directory already exists, deleting\")\n",
     "        shutil.rmtree(output_dir)\n",
-    "    os.makedirs(output_dir)\n",
     "    for image_name in range(10):\n",
     "        image_name = image_list[image_name]\n",
+    "        print(image_name)\n",
     "        image_path = os.path.join(training_path, image_name)\n",
     "        preprocessed_image = preprocessing(image_path)\n",
     "        output_path = os.path.join(output_dir, image_name)\n",
@@ -349,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
