adding good results

--- a/model_training/priyansh_rushil.ipynb
+++ b/model_training/priyansh_rushil.ipynb
@@ -21,7 +21,7 @@
      "output_type": "stream",
      "text": [
       "TensorFlow version: 2.19.0\n",
-      "GPU Available: False\n"
+      "GPU Available: [PhysicalDevice(name='/physical_device:CPU:0', device_type='CPU')]\n"
      ]
     }
    ],
@@ -44,7 +44,7 @@
     "tf.random.set_seed(42)\n",
     "\n",
     "print(f\"TensorFlow version: {tf.__version__}\")\n",
-    "print(f\"GPU Available: {len(tf.config.list_physical_devices('GPU')) > 0}\")"
+    "print(f\"GPU Available: {tf.config.list_physical_devices()}\")"
    ]
   },
   {
@@ -139,6 +139,128 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "983500bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original dataset - Melanoma: 4522, Non-melanoma: 20809\n",
+      "After subsampling - Non-melanoma: 10000\n",
+      "Augmenting melanoma images (creating ~5478 new samples)...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Priya\\Downloads\\kaggle\\melanoma-project\\.venv\\Lib\\site-packages\\albumentations\\core\\validation.py:87: UserWarning: ShiftScaleRotate is a special case of Affine transform. Please use Affine transform instead.\n",
+      "  original_init(self, **validated_kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After augmentation - Melanoma: 10000\n",
+      "Balanced dataset - Total: 20000 images\n",
+      "Class distribution - Melanoma: 10000, Non-melanoma: 10000\n"
+     ]
+    }
+   ],
+   "source": [
+    "import albumentations as A\n",
+    "import random\n",
+    "from sklearn.utils import shuffle\n",
+    "\n",
+    "# Balancing the data set\n",
+    "target_samples = 10000\n",
+    "\n",
+    "print(\n",
+    "    f\"Original dataset - Melanoma: {len(melanoma_images)}, Non-melanoma: {len(non_melanoma_images)}\")\n",
+    "\n",
+    "# 1. Subsample non-melanoma images to reduce class imbalance\n",
+    "non_melanoma_indices = list(range(len(non_melanoma_images)))\n",
+    "random.seed(42)\n",
+    "random.shuffle(non_melanoma_indices)\n",
+    "non_melanoma_indices = non_melanoma_indices[:target_samples]\n",
+    "non_melanoma_images_balanced = [non_melanoma_images[i]\n",
+    "                                for i in non_melanoma_indices]\n",
+    "non_melanoma_labels_balanced = [non_melanoma_labels[i]\n",
+    "                                for i in non_melanoma_indices]\n",
+    "\n",
+    "print(f\"After subsampling - Non-melanoma: {len(non_melanoma_images_balanced)}\")\n",
+    "\n",
+    "# 2. Augment melanoma images to balance the classes\n",
+    "augmentation = A.Compose([\n",
+    "    A.HorizontalFlip(p=0.5),\n",
+    "    A.VerticalFlip(p=0.5),\n",
+    "    A.RandomRotate90(p=0.5),\n",
+    "    A.RandomBrightnessContrast(p=0.5),\n",
+    "    A.Rotate(limit=30, p=0.5),\n",
+    "    A.GaussianBlur(blur_limit=(3, 5), p=0.3),\n",
+    "    A.ShiftScaleRotate(shift_limit=0.1, scale_limit=0.1,\n",
+    "                       rotate_limit=15, p=0.5),\n",
+    "    A.GridDistortion(p=0.3),\n",
+    "])\n",
+    "\n",
+    "melanoma_images_augmented = []\n",
+    "melanoma_labels_augmented = []\n",
+    "\n",
+    "# Add original images\n",
+    "melanoma_images_augmented.extend(melanoma_images)\n",
+    "melanoma_labels_augmented.extend(melanoma_labels)\n",
+    "\n",
+    "# Determine how many augmented images we need\n",
+    "num_augmentations_needed = target_samples - len(melanoma_images)\n",
+    "augmentations_per_image = num_augmentations_needed // len(melanoma_images) + 1\n",
+    "\n",
+    "print(\n",
+    "    f\"Augmenting melanoma images (creating ~{num_augmentations_needed} new samples)...\")\n",
+    "\n",
+    "# Generate augmented images\n",
+    "for i, img in enumerate(melanoma_images):\n",
+    "    for _ in range(augmentations_per_image):\n",
+    "        if len(melanoma_images_augmented) >= target_samples:\n",
+    "            break\n",
+    "\n",
+    "        # Convert to uint8 for albumentations\n",
+    "        img_uint8 = img.astype(np.uint8)\n",
+    "        augmented = augmentation(image=img_uint8)\n",
+    "        melanoma_images_augmented.append(augmented['image'])\n",
+    "        melanoma_labels_augmented.append(1)\n",
+    "\n",
+    "    if len(melanoma_images_augmented) >= target_samples:\n",
+    "        break\n",
+    "\n",
+    "# Trim to exact size if we generated too many\n",
+    "melanoma_images_augmented = melanoma_images_augmented[:target_samples]\n",
+    "melanoma_labels_augmented = melanoma_labels_augmented[:target_samples]\n",
+    "\n",
+    "print(f\"After augmentation - Melanoma: {len(melanoma_images_augmented)}\")\n",
+    "\n",
+    "# 3. Create balanced dataset\n",
+    "X_balanced = np.array(melanoma_images_augmented + non_melanoma_images_balanced)\n",
+    "y_balanced = np.array(melanoma_labels_augmented + non_melanoma_labels_balanced)\n",
+    "\n",
+    "# Shuffle the data\n",
+    "X_balanced, y_balanced = shuffle(X_balanced, y_balanced, random_state=42)\n",
+    "\n",
+    "# Reshape and normalize images for CNN input\n",
+    "X_balanced = X_balanced.reshape(-1, 224, 224, 1).astype('float32') / 255.0\n",
+    "\n",
+    "print(f\"Balanced dataset - Total: {X_balanced.shape[0]} images\")\n",
+    "print(\n",
+    "    f\"Class distribution - Melanoma: {np.sum(y_balanced == 1)}, Non-melanoma: {np.sum(y_balanced == 0)}\")\n",
+    "\n",
+    "# Replace original X and y with balanced dataset\n",
+    "X, y = X_balanced, y_balanced"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "12fed5e6",
    "metadata": {},
    "outputs": [
@@ -146,12 +268,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training set: 16211 images\n",
-      "Validation set: 4053 images\n",
-      "Test set: 5067 images\n",
-      "Training set - Melanoma: 2894, Non-melanoma: 13317\n",
-      "Validation set - Melanoma: 723, Non-melanoma: 3330\n",
-      "Test set - Melanoma: 905, Non-melanoma: 4162\n"
+      "Training set: 12800 images\n",
+      "Validation set: 3200 images\n",
+      "Test set: 4000 images\n",
+      "Training set - Melanoma: 6400, Non-melanoma: 6400\n",
+      "Validation set - Melanoma: 1600, Non-melanoma: 1600\n",
+      "Test set - Melanoma: 2000, Non-melanoma: 2000\n"
      ]
     }
    ],
@@ -185,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "4f50df5d",
    "metadata": {},
    "outputs": [
@@ -426,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "5fb5a951",
    "metadata": {},
    "outputs": [
@@ -434,7 +556,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Class weights: {0: 1.0, 1: 4.601589495507947}\n"
+      "Class weights: {0: 1.0, 1: 1.0}\n"
      ]
     }
    ],
@@ -456,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "c71c5fb8",
    "metadata": {},
    "outputs": [
@@ -465,8 +587,8 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/20\n",
-      "\u001b[1m507/507\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 8s/step - accuracy: 0.5571 - auc: 0.6169 - loss: 1.2917\n",
-      "Epoch 1: val_auc improved from -inf to 0.51428, saving model to ../working/melanoma_model.h5\n"
+      "\u001b[1m400/400\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2s/step - accuracy: 0.7326 - auc: 0.8094 - loss: 0.5507\n",
+      "Epoch 1: val_auc improved from -inf to 0.50691, saving model to ../working/melanoma_model.h5\n"
      ]
     },
     {
@@ -480,10 +602,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m507/507\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4033s\u001b[0m 8s/step - accuracy: 0.5571 - auc: 0.6170 - loss: 1.2916 - val_accuracy: 0.1870 - val_auc: 0.5143 - val_loss: 17.2122 - learning_rate: 1.0000e-04\n",
+      "\u001b[1m400/400\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m933s\u001b[0m 2s/step - accuracy: 0.7325 - auc: 0.8094 - loss: 0.5508 - val_accuracy: 0.5028 - val_auc: 0.5069 - val_loss: 23.5298 - learning_rate: 1.0000e-04\n",
       "Epoch 2/20\n",
-      "\u001b[1m507/507\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2s/step - accuracy: 0.6092 - auc: 0.6765 - loss: 1.1374\n",
-      "Epoch 2: val_auc improved from 0.51428 to 0.60889, saving model to ../working/melanoma_model.h5\n"
+      "\u001b[1m400/400\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2s/step - accuracy: 0.7577 - auc: 0.8322 - loss: 0.5052\n",
+      "Epoch 2: val_auc improved from 0.50691 to 0.69546, saving model to ../working/melanoma_model.h5\n"
      ]
     },
     {
@@ -497,10 +619,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m507/507\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m999s\u001b[0m 2s/step - accuracy: 0.6092 - auc: 0.6765 - loss: 1.1374 - val_accuracy: 0.4631 - val_auc: 0.6089 - val_loss: 4.8093 - learning_rate: 1.0000e-04\n",
+      "\u001b[1m400/400\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m969s\u001b[0m 2s/step - accuracy: 0.7577 - auc: 0.8322 - loss: 0.5052 - val_accuracy: 0.6678 - val_auc: 0.6955 - val_loss: 1.7853 - learning_rate: 1.0000e-04\n",
       "Epoch 3/20\n",
-      "\u001b[1m507/507\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2s/step - accuracy: 0.6320 - auc: 0.7094 - loss: 1.0592\n",
-      "Epoch 3: val_auc improved from 0.60889 to 0.66543, saving model to ../working/melanoma_model.h5\n"
+      "\u001b[1m400/400\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2s/step - accuracy: 0.7694 - auc: 0.8498 - loss: 0.4738\n",
+      "Epoch 3: val_auc improved from 0.69546 to 0.83180, saving model to ../working/melanoma_model.h5\n"
      ]
     },
     {
@@ -514,77 +636,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m507/507\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1050s\u001b[0m 2s/step - accuracy: 0.6320 - auc: 0.7094 - loss: 1.0592 - val_accuracy: 0.6361 - val_auc: 0.6654 - val_loss: 0.9750 - learning_rate: 1.0000e-04\n",
+      "\u001b[1m400/400\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m667s\u001b[0m 2s/step - accuracy: 0.7695 - auc: 0.8498 - loss: 0.4738 - val_accuracy: 0.7200 - val_auc: 0.8318 - val_loss: 0.7131 - learning_rate: 1.0000e-04\n",
       "Epoch 4/20\n",
-      "\u001b[1m507/507\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2s/step - accuracy: 0.6451 - auc: 0.7262 - loss: 1.0340\n",
-      "Epoch 4: val_auc improved from 0.66543 to 0.69506, saving model to ../working/melanoma_model.h5\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m507/507\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1036s\u001b[0m 2s/step - accuracy: 0.6451 - auc: 0.7262 - loss: 1.0340 - val_accuracy: 0.7614 - val_auc: 0.6951 - val_loss: 0.5627 - learning_rate: 1.0000e-04\n",
-      "Epoch 5/20\n",
-      "\u001b[1m507/507\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2s/step - accuracy: 0.6668 - auc: 0.7466 - loss: 1.0004\n",
-      "Epoch 5: val_auc improved from 0.69506 to 0.70259, saving model to ../working/melanoma_model.h5\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m507/507\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1040s\u001b[0m 2s/step - accuracy: 0.6668 - auc: 0.7467 - loss: 1.0004 - val_accuracy: 0.6585 - val_auc: 0.7026 - val_loss: 0.7095 - learning_rate: 1.0000e-04\n",
-      "Epoch 6/20\n",
-      "\u001b[1m507/507\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2s/step - accuracy: 0.6849 - auc: 0.7745 - loss: 0.9453\n",
-      "Epoch 6: val_auc did not improve from 0.70259\n",
-      "\u001b[1m507/507\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m980s\u001b[0m 2s/step - accuracy: 0.6849 - auc: 0.7745 - loss: 0.9453 - val_accuracy: 0.4954 - val_auc: 0.6990 - val_loss: 0.9347 - learning_rate: 1.0000e-04\n",
-      "Epoch 7/20\n",
-      "\u001b[1m507/507\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3s/step - accuracy: 0.7112 - auc: 0.8035 - loss: 0.8905\n",
-      "Epoch 7: val_auc did not improve from 0.70259\n",
-      "\u001b[1m507/507\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1350s\u001b[0m 3s/step - accuracy: 0.7112 - auc: 0.8036 - loss: 0.8904 - val_accuracy: 0.3467 - val_auc: 0.6924 - val_loss: 1.4297 - learning_rate: 1.0000e-04\n",
-      "Epoch 8/20\n",
-      "\u001b[1m507/507\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2s/step - accuracy: 0.7224 - auc: 0.8265 - loss: 0.8398\n",
-      "Epoch 8: val_auc did not improve from 0.70259\n",
-      "\u001b[1m507/507\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1001s\u001b[0m 2s/step - accuracy: 0.7224 - auc: 0.8265 - loss: 0.8398 - val_accuracy: 0.3923 - val_auc: 0.6854 - val_loss: 1.3307 - learning_rate: 1.0000e-04\n",
-      "Epoch 9/20\n",
-      "\u001b[1m507/507\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2s/step - accuracy: 0.7606 - auc: 0.8535 - loss: 0.7807\n",
-      "Epoch 9: val_auc did not improve from 0.70259\n",
-      "\u001b[1m507/507\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1306s\u001b[0m 3s/step - accuracy: 0.7606 - auc: 0.8535 - loss: 0.7806 - val_accuracy: 0.4111 - val_auc: 0.6922 - val_loss: 1.4342 - learning_rate: 1.0000e-04\n",
-      "Epoch 10/20\n",
-      "\u001b[1m507/507\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2s/step - accuracy: 0.7928 - auc: 0.8971 - loss: 0.6677\n",
-      "Epoch 10: val_auc did not improve from 0.70259\n",
-      "\u001b[1m507/507\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1109s\u001b[0m 2s/step - accuracy: 0.7928 - auc: 0.8971 - loss: 0.6675 - val_accuracy: 0.5564 - val_auc: 0.6889 - val_loss: 0.9237 - learning_rate: 2.0000e-05\n",
-      "Epoch 11/20\n",
-      "\u001b[1m507/507\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3s/step - accuracy: 0.8041 - auc: 0.9193 - loss: 0.5985\n",
-      "Epoch 11: val_auc did not improve from 0.70259\n",
-      "\u001b[1m507/507\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1334s\u001b[0m 3s/step - accuracy: 0.8041 - auc: 0.9193 - loss: 0.5984 - val_accuracy: 0.5320 - val_auc: 0.6837 - val_loss: 1.0088 - learning_rate: 2.0000e-05\n",
-      "Epoch 12/20\n",
-      "\u001b[1m507/507\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2s/step - accuracy: 0.8195 - auc: 0.9312 - loss: 0.5581\n",
-      "Epoch 12: val_auc did not improve from 0.70259\n",
-      "\u001b[1m507/507\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1288s\u001b[0m 3s/step - accuracy: 0.8195 - auc: 0.9312 - loss: 0.5580 - val_accuracy: 0.6237 - val_auc: 0.6923 - val_loss: 0.8126 - learning_rate: 2.0000e-05\n",
-      "Epoch 13/20\n",
-      "\u001b[1m507/507\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3s/step - accuracy: 0.8273 - auc: 0.9345 - loss: 0.5442\n",
-      "Epoch 13: val_auc did not improve from 0.70259\n",
-      "\u001b[1m507/507\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1420s\u001b[0m 3s/step - accuracy: 0.8273 - auc: 0.9345 - loss: 0.5441 - val_accuracy: 0.6047 - val_auc: 0.6813 - val_loss: 0.8660 - learning_rate: 2.0000e-05\n",
-      "Epoch 14/20\n",
-      "\u001b[1m507/507\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2s/step - accuracy: 0.8437 - auc: 0.9434 - loss: 0.5063\n",
-      "Epoch 14: val_auc did not improve from 0.70259\n",
-      "\u001b[1m507/507\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1231s\u001b[0m 2s/step - accuracy: 0.8437 - auc: 0.9434 - loss: 0.5063 - val_accuracy: 0.6035 - val_auc: 0.6844 - val_loss: 0.8861 - learning_rate: 2.0000e-05\n"
+      "\u001b[1m240/400\u001b[0m \u001b[32m━━━━━━━━━━━━\u001b[0m\u001b[37m━━━━━━━━\u001b[0m \u001b[1m4:26\u001b[0m 2s/step - accuracy: 0.7815 - auc: 0.8698 - loss: 0.4412"
      ]
     }
    ],
@@ -614,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "0ab32441",
    "metadata": {},
    "outputs": [
@@ -661,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "39d19492",
    "metadata": {},
    "outputs": [
@@ -713,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "158c00a1",
    "metadata": {},
    "outputs": [
@@ -748,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "ef9709c2",
    "metadata": {},
    "outputs": [
@@ -810,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "656ba72f",
    "metadata": {},
    "outputs": [
@@ -861,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "68ceea8c",
    "metadata": {},
    "outputs": [
