--- a/notebooks/data_exploration.ipynb
+++ b/notebooks/data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
        "'\\nMEL: Melanoma\\nNV: Melanocytic nevus\\nBCC: Basal cell carcinoma\\nAK: Actinic keratosis\\nBKL: Benign keratosis (solar lentigo / seborrheic keratosis / lichen planus-like keratosis)\\nDF: Dermatofibroma\\nVASC: Vascular lesion\\nSCC: Squamous cell carcinoma\\nUNK: None of the above\\n'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
        "'\\nEnglish\\nMEL: Cancerous cells, what we are trying to detect\\nNV: mole on the skin, not cancerous\\n    - round, flat/raised, brown or black spots on the skin with smooth edges\\nBCC: type of skin cancer, not melanoma\\n    - rolled edges, pearly appearance, and visible blood vessels\\nAK: pre-cancerous skin condition, not melanoma\\n    - rough, scaly patches on sun-exposed skin\\nBKL: benign skin lesions/skin growth, not cancerous\\n    - brown or black spots on the skin, often with irregular borders\\nDF: firm skin bumps, not cancerous\\n    - small, raised, and firm nodules that are usually brown or skin-colored\\nVASC: abnormal malformation of blood vessels, not cancerous\\n    - red or purple lesions on the skin, often with a raised appearance\\nSCC: type of skin cancer, not melanoma\\n    - scaly, crusted patches or open sores that do not heal\\nUNK: unc status\\n'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,24 +303,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating output directory\n",
-      "ISIC_0000000.jpg\n",
-      "ISIC_0000001.jpg\n",
-      "ISIC_0000002.jpg\n",
-      "ISIC_0000003.jpg\n",
-      "ISIC_0000004.jpg\n",
-      "ISIC_0000006.jpg\n",
-      "ISIC_0000007.jpg\n",
-      "ISIC_0000008.jpg\n",
-      "ISIC_0000009.jpg\n",
-      "ISIC_0000010.jpg\n"
+      "Output directory already exists, deleting\n"
      ]
     }
    ],
@@ -351,9 +341,9 @@
     "    elif os.path.exists(output_dir):\n",
     "        print(\"Output directory already exists, deleting\")\n",
     "        shutil.rmtree(output_dir)\n",
-    "    for image_name in range(10):\n",
+    "        os.makedirs(output_dir)\n",
+    "    for image_name in range(len(image_list)): # <------------------------------ Change for full dataset len(image_list)\n",
     "        image_name = image_list[image_name]\n",
-    "        print(image_name)\n",
     "        image_path = os.path.join(training_path, image_name)\n",
     "        preprocessed_image = preprocessing(image_path)\n",
     "        output_path = os.path.join(output_dir, image_name)\n",
@@ -364,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,9 +427,6 @@
     "        A.RandomGamma(gamma_limit=(80, 120), p=0.5),\n",
     "\n",
     "        A.GaussianBlur(blur_limit=(3, 5), p=0.3),\n",
-    "        \n",
-    "\n",
-    "\n",
     "    ])\n",
     "    return transformation\n",
     "\n",
@@ -479,7 +466,7 @@
     "            \n",
     "            cv2.imwrite(aug_path, aug_img)\n",
     "\n",
-    "# augment_data(\"../preprocessed_images\", \"../augmented_images\", num_augmentations=3)"
+    "augment_data(\"../preprocessed_images\", \"../augmented_images\", num_augmentations=3)"
    ]
   }
  ],
