--- a/model_training/himal_han.ipynb
+++ b/model_training/himal_han.ipynb
@@ -5,30 +5,59 @@
    "id": "ec2e887a",
    "metadata": {},
    "source": [
-    "Helpful resources:\n",
+    "**Helpful resources**\n",
     "\n",
     "Sklearn train_test_split - https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.train_test_split.html\n",
+    "Implementing a CNN in TensorFlow & Keras - https://learnopencv.com/implementing-cnn-tensorflow-keras/\n",
     "\n",
-    "Implementing a CNN in TensorFlow & Keras - https://learnopencv.com/implementing-cnn-tensorflow-keras/\n"
+    "**SET UP STEPS - Windows**\n",
+    "# Recommeded create virtual environment\n",
+    "Go to Jupyter Notebook kernels (top right)\n",
+    "Select another kernel\n",
+    "Python Environments\n",
+    "+ Create Python Environment\n",
+    "Venv\n",
+    "Select Python interpreter and create\n",
+    "\n",
+    "# Prepare venv using terminal\n",
+    "activate environment: .\\.venv\\Scripts\\activate\n",
+    "\n",
+    "# Installations on venv\n",
+    "pip install jupyter ipykernel\n",
+    "pip install matplotlib \n",
+    "pip install pandas\n",
+    "pip install scikit-learn\n",
+    "pip install tensorflow\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "a5136d6d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.19.0\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split\n"
+    "from sklearn.model_selection import train_test_split\n",
+    "import tensorflow as tf\n",
+    "print(tf.__version__)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "552f9f5b",
    "metadata": {},
    "outputs": [],
@@ -40,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "1f9bb842",
    "metadata": {},
    "outputs": [
@@ -49,9 +78,7 @@
      "output_type": "stream",
      "text": [
       "Train set size:  7235\n",
-      "Test set size:  1809\n",
-      "['ISIC_0055348' 'ISIC_0030579' 'ISIC_0024502' 'ISIC_0062765'\n",
-      " 'ISIC_0013742_downsampled']\n"
+      "Test set size:  1809\n"
      ]
     }
    ],
@@ -69,13 +96,30 @@
     "X_train, X_test, y_train, y_test = train_test_split(image_names, image_labels, test_size=0.2, random_state=88, stratify=image_labels)\n",
     "\n",
     "print(\"Train set size: \", len(X_train))\n",
-    "print(\"Test set size: \", len(X_test))\n"
+    "print(\"Test set size: \", len(X_test))\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a77dea6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load images\n",
+    "for image in image_names:\n",
+    "    image = image + '_aug_1.jpg'\n",
+    "    if not os.path.exists(os.path.join(images_path, image)):\n",
+    "        print(f\"Image {image} not found in {images_path}\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
