fixed augmented images to only augment for melanoma

--- a/notebooks/data_exploration.ipynb
+++ b/notebooks/data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
       "Found training labels\n",
       "Found testing labels\n",
       "Training data:  25331\n",
-      "Testing data:  1592\n",
+      "Testing data:  8238\n",
       "Training labels:  25331\n",
       "Testing labels:  8238\n"
      ]
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
        "'\\nMEL: Melanoma\\nNV: Melanocytic nevus\\nBCC: Basal cell carcinoma\\nAK: Actinic keratosis\\nBKL: Benign keratosis (solar lentigo / seborrheic keratosis / lichen planus-like keratosis)\\nDF: Dermatofibroma\\nVASC: Vascular lesion\\nSCC: Squamous cell carcinoma\\nUNK: None of the above\\n'"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
        "'\\nEnglish\\nMEL: Cancerous cells, what we are trying to detect\\nNV: mole on the skin, not cancerous\\n    - round, flat/raised, brown or black spots on the skin with smooth edges\\nBCC: type of skin cancer, not melanoma\\n    - rolled edges, pearly appearance, and visible blood vessels\\nAK: pre-cancerous skin condition, not melanoma\\n    - rough, scaly patches on sun-exposed skin\\nBKL: benign skin lesions/skin growth, not cancerous\\n    - brown or black spots on the skin, often with irregular borders\\nDF: firm skin bumps, not cancerous\\n    - small, raised, and firm nodules that are usually brown or skin-colored\\nVASC: abnormal malformation of blood vessels, not cancerous\\n    - red or purple lesions on the skin, often with a raised appearance\\nSCC: type of skin cancer, not melanoma\\n    - scaly, crusted patches or open sores that do not heal\\nUNK: unc status\\n'"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,9 +407,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ISIC_0000002', 'ISIC_0000004', 'ISIC_0000013', 'ISIC_0000022_downsampled', 'ISIC_0000026_downsampled']\n",
+      "ISIC_0000002.jpg\n",
+      "../preprocessed_images/ISIC_0000002.jpg\n",
+      "ISIC_0000004.jpg\n",
+      "../preprocessed_images/ISIC_0000004.jpg\n",
+      "ISIC_0000013.jpg\n",
+      "../preprocessed_images/ISIC_0000013.jpg\n",
+      "ISIC_0000022_downsampled.jpg\n",
+      "../preprocessed_images/ISIC_0000022_downsampled.jpg\n",
+      "ISIC_0000026_downsampled.jpg\n",
+      "../preprocessed_images/ISIC_0000026_downsampled.jpg\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "def data_augmentation():\n",
@@ -444,11 +462,19 @@
     "\n",
     "    transformation = data_augmentation()\n",
     "\n",
-    "    for image_name in os.listdir(input):\n",
+    "    # find melanoma images in the training set\n",
+    "    all_melanoma = df[df[\"MEL\"] == 1]['image'].tolist()\n",
+    "\n",
+    "    # print(all_melanoma[:5]) \n",
+    "\n",
+    "    for image_name in all_melanoma[:5]: # <------------------------------ Change for all_melanoma images \n",
+    "        image_name = image_name + \".jpg\"\n",
+    "        # print(image_name)\n",
     "        image = os.path.join(input, image_name).replace(\"\\\\\", \"/\")\n",
     "        if image_name.endswith(\".csv\"):\n",
     "            continue\n",
     "        \n",
+    "        # print(image)\n",
     "        image = cv2.imread(image)\n",
     "        image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
     "\n",
@@ -486,7 +512,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
